# cp_lc

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-lock.txt
artifacts/: catalog.csv  shortlist.csv
configs/: benchmark.toml
data/: shortlist.py
latticecp/: __init__.py  conformal.py  diagnostics.py  forecasters.py  generators.py  lattice.py  pipeline.py  scores.py  selection.py  spectral.py  theory.py
latticecp/data/: catalog.py  loaders.py  shortlist.py  views.py
scripts/: compare_replication.py  diff_reproduction.py
slurm/: submit_benchmark.sh
stages/: s00_fetch_catalog.py  s01_scan_views.py  s02_make_shortlist.py  s03_run_benchmark.py  s04_merge.py  s05_analyze.py  s06_figures.py  s07_audit.py
tests/: test_driver_rows.py  test_pipeline.py  test_theorems.py
